Fix bleeding cards

--- a/css/style.css
+++ b/css/style.css
@@ -188,10 +188,12 @@ header h1 {
   -webkit-user-select: none;
   text-align: center;
   width: 110px;
-  height: 48px;
+  min-height: 48px;
+  height: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  overflow: hidden;
 }
 
 .person-card:hover {
@@ -222,6 +224,11 @@ header h1 {
   font-weight: 600;
   color: var(--color-text);
   line-height: 1.2;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
 }
 
 .person-card .person-years {
